Updated the notebook

--- a/AirtelKenya_TwitterScrapper.ipynb
+++ b/AirtelKenya_TwitterScrapper.ipynb
@@ -1203,6 +1203,86 @@
       "Run retriver\n",
       "4\n",
       "3256\n",
+      "False\n",
+      "Run retriver\n",
+      "5\n",
+      "3256\n",
+      "False\n",
+      "Run retriver\n",
+      "6\n",
+      "3256\n",
+      "False\n",
+      "Run retriver\n",
+      "7\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "8\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "9\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "10\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "11\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "12\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "13\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "14\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "15\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "16\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "17\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "18\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "19\n",
+      "3257\n",
+      "False\n",
+      "Run retriver\n",
+      "20\n",
+      "3258\n",
+      "False\n",
+      "Run retriver\n",
+      "21\n",
+      "3258\n",
+      "False\n",
+      "Run retriver\n",
+      "22\n",
+      "3258\n",
+      "False\n",
+      "Run retriver\n",
+      "23\n",
+      "3258\n",
+      "False\n",
+      "Run retriver\n",
+      "24\n",
+      "3258\n",
       "False\n"
      ]
     }
