Added more comments and corrected some code errors

--- a/AirtelKenya_TwitterScrapper.ipynb
+++ b/AirtelKenya_TwitterScrapper.ipynb
@@ -1152,15 +1152,31 @@
     "#         if hasattr(tweet, 'in_reply_to_status_id_str'):\n",
     "#             if (tweet.in_reply_to_status_id_str==tweet_id):\n",
     "#                 replies.append(tweet)\n",
-    "            # Loop through our list of tweet replies to create a dictionary that has both the tweet and its replies\n",
-    "#             for tweet in replies:\n",
-    "#                 row = {'ID':tweet_id, 'Date': airtel_mention_df.Date.iloc[x], 'Username':name, \n",
-    "#                         'Post': airtel_mention_df.Post.iloc[x],  'Replier': tweet.user.screen_name, \n",
-    "#                         'Mentions': airtel_mention_df.Mentions.iloc[x],  'Hashtags': airtel_mention_df.Hashtags.iloc[x],  \n",
-    "#                         'Reply_date':tweet.created_at, 'Reply': tweet.text.replace('\\n', ' '), \n",
-    "#                         'Reply_mentions':' '.join(x['screen_name'] for x in tweet.entities['user_mentions']), \n",
-    "#                         'Reply_Hashtags':' '.join(x['text'] for x in tweet.entities['hashtags'])}\n",
-    "#                 airtel_replies.append(row)\n"
+    "\n",
+    "        # Loop through our list of tweet replies to create a dictionary that has both the tweet and its replies\n",
+    "#       for tweet in replies:\n",
+    "#           row = {'ID':tweet_id, 'Date': airtel_mention_df.Date.iloc[x], 'Username':name, \n",
+    "#                   'Post': airtel_mention_df.Post.iloc[x],  'Replier': tweet.user.screen_name, \n",
+    "#                   'Mentions': airtel_mention_df.Mentions.iloc[x],  'Hashtags': airtel_mention_df.Hashtags.iloc[x],  \n",
+    "#                   'Reply_date':tweet.created_at, 'Reply': tweet.text.replace('\\n', ' '), \n",
+    "#                   'Reply_mentions':' '.join(x['screen_name'] for x in tweet.entities['user_mentions']), \n",
+    "#                   'Reply_Hashtags':' '.join(x['text'] for x in tweet.entities['hashtags'])}\n",
+    "#           airtel_replies.append(row)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternatively\n",
+    "\n",
+    "The above code takes a lot of time especially if you have a large list of tweets you wish to get replies for. Hence decided to split the code into independent functions that can be called when required. \n",
+    "\n",
+    "The Idea is, we already know that if I get tweets after a tweet posted yesterday I would get all tweets posted today too. And since replies are tweets as well, it means that if I get all the tweets since yesterday I would surely get some replies for a tweet posted today. \n",
+    "\n",
+    "Hence the functions would get a dataframe sorted with the oldest tweet coming first and we get all tweets from Airtel since that tweet was posted and add them to a list of refence that would be added in case we meet a tweet that doesn't have a reply in the list, prompting us to query for all the tweets after it was posted. \n",
+    "\n",
+    "The process follows the path of checking if a tweet has any replies in our reference tweet list and if it doesn't we query for tweets after it was posted and check if we have gotten the replies then."
    ]
   },
   {
@@ -1175,15 +1191,19 @@
     "    avoiding creation of duplicates\"\"\"\n",
     "\n",
     "def retriver(name, tweet_id,tweetsData):\n",
+    "    # Get tweets by Airtel_ke since the current tweet_id\n",
     "    try:\n",
     "        tweet_data = tp.Cursor(api.user_timeline,id='AIRTEL_KE', since_id = tweet_id, timeout=999999).items()\n",
     "    except:\n",
     "        print('failed to get data')\n",
     "        tweet_data = []\n",
+    "    \n",
+    "    # Check if the tweets gotten are already in our reference tweet list \"tweetsData\"\n",
     "    for tweet in tweet_data:\n",
     "        if tweet not in tweetsData:\n",
     "            tweetsData.append(tweet)\n",
     "    \n",
+    "    # Return our updated reference tweet list\n",
     "    return tweetsData"
    ]
   },
@@ -1206,17 +1226,23 @@
    "outputs": [],
    "source": [
     "def get_replies(Data_tweets,df, tweet_id):\n",
-    "    airtel_replies=[]\n",
-    "    replies = []\n",
+    "    airtel_replies=[] # Hold the dictionaries holding our current tweet and its replies\n",
+    "    replies = [] # Hold the tweets with the attribute 'in_reply_to_status_id_str' equal to the ID of our current tweet\n",
+    "    \n",
+    "    # Check if we have tweets with our tweet id as the 'in_reply_to_status_id_str' and add the to our replies list\n",
     "    for tweet in Data_tweets:\n",
     "#         print('In list')\n",
     "        if hasattr(tweet, 'in_reply_to_status_id_str'):\n",
     "            if (tweet.in_reply_to_status_id_str==tweet_id):\n",
     "                replies.append(tweet)\n",
     "                print('good to go ID')\n",
+    "                \n",
+    "    # Check if our replies list is empty and if not go through each reply matching it with current tweet to form a dictionary\n",
     "    if len(replies) > 0:\n",
     "        for tweet in replies:\n",
     "            print('good to go')\n",
+    "            # Each row shall have the current tweet and a reply. \n",
+    "            # Hence if a tweet has 2 replies we will have 2 rows created with the same tweet but different replies\n",
     "            row = {'ID':tweet_id, 'Date': df.Date.iloc[x], 'Username':name, \n",
     "                    'Post': df.Post.iloc[x],  'Replier': tweet.user.screen_name, \n",
     "                    'Mentions': df.Mentions.iloc[x],  'Hashtags': df.Hashtags.iloc[x],  \n",
@@ -1224,6 +1250,8 @@
     "                    'Reply_mentions':' '.join(x['screen_name'] for x in tweet.entities['user_mentions']), \n",
     "                    'Reply_Hashtags':' '.join(x['text'] for x in tweet.entities['hashtags'])}\n",
     "            airtel_replies.append(row)\n",
+    "    \n",
+    "    # Return the list of our replies each in a dictionary after matching with our current tweet\n",
     "    return airtel_replies"
    ]
   },
@@ -1233,8 +1261,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repliesData = []\n",
+    "# This will hold all the tweets and their replies in dictionary format for each row\n",
+    "repliesData = [] \n",
+    "\n",
+    "# We sort our dataframe of tweets using the ID column in ascending order to get the oldest tweets first\n",
     "sort_df = airtel_mention_df.sort_values(by = 'ID')\n",
+    "\n",
+    "# Here we shall hold all our tweets that we suspect might be replies to our tweets\n",
     "Data_tweets=[]"
    ]
   },
@@ -1357,17 +1390,25 @@
     "    print(x)\n",
     "    present = False\n",
     "    print(len(Data_tweets))\n",
+    "    \n",
+    "    # To be able to know if there is any reply to our tweet in our reference tweet list\n",
+    "    # We go through the list checking and changing our present variable to true in case we find it\n",
     "    for tw in Data_tweets:\n",
     "        if tw.in_reply_to_status_id_str == tweet_id:\n",
     "            present = True\n",
     "    print(present)\n",
+    "    \n",
+    "    # This loop checks for the replies of the current tweet and calls the relevant function to get the replies.\n",
     "    if present == True:\n",
     "        print('good')\n",
+    "        # Call the get_replies to format our data by combinig our tweet and its replies\n",
     "        try:\n",
     "            repliesData.extend(get_replies(Data_tweets, sort_df, tweet_id))\n",
     "        except:\n",
     "            print('failed')\n",
     "    else:\n",
+    "        # Since we don't have replies to current tweet, we call retriever to look for all tweets after our current tweet\n",
+    "        # After the tweets are returned, We call get_replies function to see if we got replies for our tweet\n",
     "        try:\n",
     "            Data_tweets= retriver(name, tweet_id, Data_tweets)\n",
     "            print(\"Run retriver\")\n",
@@ -1386,8 +1427,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a dataframe from our list of dictionaries\n",
     "airtelData_df = pd.DataFrame(repliesData)\n",
     "\n",
+    "#Store our final results in a csv file\n",
     "airtelData_df.to_csv(path_or_buf=\"AirtelData.csv\")"
    ]
   },
@@ -1406,6 +1449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test how the attributes are formed in a tweet object returned by our query\n",
     "# test = api.get_status('1243081255102615552')\n",
     "# test.entities"
    ]
@@ -1428,9 +1472,12 @@
     }
    ],
    "source": [
+    "# Getting a tweet from barack obama from 2015\n",
     "tC = got.manager.TweetCriteria().setUsername(\"barackobama\").setSince(\"2015-09-10\")\\\n",
     "                                            .setMaxTweets(1)\n",
     "twts = got.manager.TweetManager.getTweets(tC)\n",
+    "\n",
+    "# Iterating through the object returned by GetOldTweets3 to see what is returned in the object\n",
     "for twe in twts:\n",
     "    for tw in twe:\n",
     "        print(tw)"
@@ -1453,6 +1500,7 @@
     }
    ],
    "source": [
+    "# Looking at the first and last tweet IDs to see the difference\n",
     "print(sort_df.ID.head(1))\n",
     "print(sort_df.ID.tail(1))"
    ]
@@ -1495,7 +1543,7 @@
     }
    ],
    "source": [
-    "1295448699070554119 - 1169605566479687680"
+    "# 1295448699070554119 - 1169605566479687680 # Looking at the number of tweets between our oldest tweet and the latest"
    ]
   },
   {
@@ -1506,13 +1554,21 @@
    "source": [
     "# This is the code I need you to run on a strong and faster machine without any internet fluctuation\n",
     "# This code goes through all tweets posted since the oldest tweet in our list to the last tweet in our tweet\n",
-    "status_id_lst = airtel_mention_df[\"ID\"].tolist()\n",
+    "status_id_lst = airtel_mention_df[\"ID\"].tolist() # Get all tweet IDs in the column ID and make them a list\n",
     "dataAirtel = []\n",
     "\n",
+    "# Loop through tweeter and get each tweet from the oldest tweet to our current tweet\n",
     "for x in range(1169605566479687680, 1295448699070554119):\n",
-    "    tweet = api.get_status(str(x))\n",
+    "    \n",
+    "    tweet = api.get_status(str(x)) # Get tweet with the current x value as tweet ID \n",
+    "    \n",
+    "    # Check if the attribute 'in_reply_to_status_id_str' value is among our list of tweet IDs\n",
     "    if tweet.in_reply_to_status_id_str in status_id_lst:\n",
+    "        \n",
+    "        # Get the row from our dataframe with the current ID if ID is in our list of tweet IDs\n",
     "        df = airtel_mention_df.loc[airtel_mention_df['ID'] == tweet.in_reply_to_status_id_str]\n",
+    "        \n",
+    "        # Turn the row we have to a list and use the values to create another row with the replies too in the form of a dictionary\n",
     "        for rw in df.values.tolist():\n",
     "            row = {'ID':rw[0], 'Date': rw[1], 'Username':rw[3], \n",
     "                    'Post': rw[2], 'Mentions': rw[7],  'Hashtags': rw[8],\n",
