--- a/GroupDataScapping_AirtelReplies.ipynb
+++ b/GroupDataScapping_AirtelReplies.ipynb
@@ -1142,15 +1142,18 @@
     "            if (twt.in_reply_to_status_id_str==tweet_id):\n",
     "                replyTweets.append(twt)\n",
     "                \n",
-    "        #Loop through reply tweets found and create an entry of the post and the reply\n",
-    "        for tweet in replyTweets:\n",
-    "            row = {'ID':tweet_id, 'Date': mention_df.Date.iloc[x], 'Username':name, \n",
-    "                    'Post': mention_df.Post.iloc[x],  'Replier': tweet.user.screen_name, \n",
-    "                    'Mentions': mention_df.Mentions.iloc[x],  'Hashtags': mention_df.Hashtags.iloc[x],  \n",
-    "                    'Reply_date':tweet.created_at, 'Reply': tweet.text.replace('\\n', ' '), \n",
-    "                    'Reply_mentions':' '.join(x['screen_name'] for x in tweet.entities['user_mentions']), \n",
-    "                    'Reply_Hashtags':' '.join(x['text'] for x in tweet.entities['hashtags'])}\n",
-    "            replies.append(row)\n"
+    "    #Loop through reply tweets found and create an entry of the post and the reply\n",
+    "    for tweet in replyTweets:\n",
+    "        row = {'ID':tweet_id, 'Date': mention_df.Date.iloc[x], 'Username':name, \n",
+    "                'Post': mention_df.Post.iloc[x],  'Replier': tweet.user.screen_name, \n",
+    "                'Mentions': mention_df.Mentions.iloc[x],  'Hashtags': mention_df.Hashtags.iloc[x],  \n",
+    "                'Reply_date':tweet.created_at, 'Reply': tweet.text.replace('\\n', ' '), \n",
+    "                'Reply_mentions':' '.join(x['screen_name'] for x in tweet.entities['user_mentions']), \n",
+    "                'Reply_Hashtags':' '.join(x['text'] for x in tweet.entities['hashtags'])}\n",
+    "        replies.append(row)\n",
+    "    # save our final data into a csv file\n",
+    "    replies_df = pd.DataFrame(replies)\n",
+    "    replies_df.to_csv(path_or_buf= \"AirtelService.csv\", index_label=\"index\")\n"
    ]
   },
   {
