Added more comments and corrected some code errors

--- a/GroupDataScapping_AirtelReplies.ipynb
+++ b/GroupDataScapping_AirtelReplies.ipynb
@@ -1135,7 +1135,12 @@
     "    replyTweets = [] # List of tweets that have the \"in_reply_to_status_id_str\" attribute equal to the value of our current tweet ID\n",
     "    \n",
     "    # Query for all the tweets that are addressed to our user that were posted after our current tweet\n",
-    "    for twt in tp.Cursor(api.search,q='to:'+name, since_id = tweet_id, timeout=999999).items():\n",
+    "    try:\n",
+    "        queryResult = tp.Cursor(api.search,q='to:'+name, since_id = tweet_id, timeout=999999).items()\n",
+    "    except:\n",
+    "        queryResult = []\n",
+    "    \n",
+    "    for twt in queryResult:\n",
     "\n",
     "        # Loop through every tweet gotten to check if they have the attribute \"in_reply_to_status_id_str\" and it is equal to our current tweet ID\n",
     "        if hasattr(twt, 'in_reply_to_status_id_str'):\n",
@@ -1165,6 +1170,16 @@
     "# save our final data into a csv file\n",
     "replies_df = pd.DataFrame(replies)\n",
     "replies_df.to_csv(path_or_buf= \"AirtelService.csv\", index_label=\"index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in []:\n",
+    "    print(t)"
    ]
   },
   {
