Edited variable error and commented out useless codes chunks

--- a/GetAirtelTweets_TweepyVersion.ipynb
+++ b/GetAirtelTweets_TweepyVersion.ipynb
@@ -546,11 +546,11 @@
     "AirtelService = []\n",
     "for x, tweet_id in enumerate(tweets_df.ID):\n",
     "    status = api.get_status(tweet_id)\n",
-    "    print(x)\n",
+    "#     print(x)\n",
     "    if hasattr(status, 'in_reply_to_status_id_str'):\n",
     "        QId = status.in_reply_to_status_id_str\n",
     "        if QId != None:\n",
-    "            print(tweet_id, \" => In reply to => \",QId)\n",
+    "#             print(tweet_id, \" => In reply to => \",QId)\n",
     "            QStatus = api.get_status(QId)\n",
     "            row = {'ID':QId,'Date': QStatus.created_at, \n",
     "                   'Username':QStatus.user.screen_name,'Post': QStatus.text.replace('\\n', ' '),\n",
