Completed data retrieval of airtel customer service since 01/08/2019 to 27/08/2020

--- a/GroupDataScapping_AirtelReplies.ipynb
+++ b/GroupDataScapping_AirtelReplies.ipynb
@@ -4424,7 +4424,47 @@
       "3634 1290207672378302465\n",
       "3635 1290205860711415809\n",
       "3636 1290204076811014145\n",
-      "3637 1290201978107174912\n"
+      "3637 1290201978107174912\n",
+      "error\n",
+      "3638 1290201629069729793\n",
+      "error\n",
+      "3639 1290201330510729217\n",
+      "error\n",
+      "3640 1290199482815062019\n",
+      "error\n",
+      "3641 1290198925194952704\n",
+      "error\n",
+      "3642 1290198138591105026\n",
+      "error\n",
+      "3643 1290195279975608320\n",
+      "error\n",
+      "3644 1290193867069784064\n",
+      "error\n",
+      "3645 1290191860086927360\n",
+      "error\n",
+      "3646 1290191693656989697\n",
+      "error\n",
+      "3647 1290191108010463232\n",
+      "error\n",
+      "3648 1290188832411799553\n",
+      "error\n",
+      "3649 1290186358623891456\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n",
+      "3650 1290185189516169216\n",
+      "error\n",
+      "3651 1290182447984865280\n",
+      "error\n",
+      "3652 1290181296732475392\n",
+      "error\n",
+      "3653 1290180300933181441\n",
+      "error\n",
+      "3654 1290180215658827776\n"
      ]
     }
    ],
